[package]
name = "fltk-extras"
version = "0.1.0"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2021"
description = "Some extra widgets for fltk-rs"
repository = "https://github.com/MoAlyousef/fltk-extras"
documentation = "https://docs.rs/fltk-extras"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
fltk = "1.3.17"