[package]
name = "fltk-extras"
version = "0.1.2"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2021"
rust-version = "1.56"
description = "Some extra widgets for fltk-rs"
repository = "https://github.com/fltk-rs/fltk-extras"
documentation = "https://docs.rs/fltk-extras"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
fltk = "1.4.0"